<resources>
    <string name="app_name">Petagram</string>
    <string name="text">Qhubo parce</string>
    <string name="boton">Tocame</string>
    <string name="mensaje">Añadido a favoritos</string>
    <string name="text_action">Accion!</string>
    <string-array name="planetas">
        <item>Mercurio</item>
        <item>Venus</item>
        <item>Tierra</item>
        <item>Marte</item>
        <item>Jupiter</item>
    </string-array>
    <string name="titulo_card">Android 5.0</string>
    <string name="descripcion">Desde esta version se incluye material Design, Lollipop</string>
    <string name="solicitado">imagen del bombon</string>
</resources>
