<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luisb.petagram.MainActivity"
    android:background="@color/colorFondo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margen_layout">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/sfiMiIndicadorRefresh"
            android:layout_width="match_parent"
            android:layout_height="@dimen/lista_height">

            <ListView
                android:id="@+id/lstMiLista"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lista_height">
            </ListView>

        </android.support.v4.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sfiMiIndicadorRefresh"
            android:text="@string/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texto"
            android:text="@string/boton"
            android:theme="@style/MyRaisedButton" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Myfav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:src="@drawable/star_ic" />

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/card_medida"
            android:layout_height="@dimen/card_medida"
            android:layout_below="@+id/Myfav"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/my_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/altura_img"
                    android:contentDescription="@string/solicitado"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bombon" />

                <TextView
                    android:id="@+id/tvTituloTarjeta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/my_image"
                    android:text="@string/titulo_card"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_card"/>

                <TextView
                    android:id="@+id/descrip_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTituloTarjeta"
                    android:text="@string/descripcion" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
